--- a/src/main/resources/static/paymentFail.html
+++ b/src/main/resources/static/paymentFail.html
@@ -19,9 +19,11 @@
 </head>
 <body>
 <header id="headers"></header>
-<h2> 결제 실패 </h2>
-<p id="code"></p>
-<p id="message"></p>
+<div class="container text-center">
+    <h1>포인트 충전 실패 </h1>
+    <p id="code"></p>
+    <p id="message"></p>
+</div>
 </body>
 </html>
 
@@ -33,4 +35,8 @@
 
     codeElement.textContent = "에러코드: " + urlParams.get("code");
     messageElement.textContent = "실패 사유: " + urlParams.get("message");
+
+    setTimeout(function () {
+        window.location.href = "/index.html";
+    });
 </script>
