--- a/src/main/resources/static/paymentSuccess.html
+++ b/src/main/resources/static/paymentSuccess.html
@@ -15,6 +15,7 @@
             integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
             src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
+    <script src="/js/token.js"></script>
     <script src="/js/basic.js"></script>
     <link href="/css/payment.css" rel="stylesheet">
 </head>
@@ -27,6 +28,10 @@
 
 </body>
 <script>
+    $("#headers").load("/header.html", function (response, status, xhr) {
+        checkLoginStatus();
+    })
+
     const urlParams = new URLSearchParams(window.location.search);
     const paymentKey = urlParams.get("paymentKey");
     const orderId = urlParams.get("orderId");
