--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head id="head">
     <meta charset="UTF-8">
-    <title>Ticket Auction</title>
+    <title>Auction Seats</title>
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
           name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
@@ -15,7 +15,7 @@
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
     <script src="/js/token.js"></script>
     <script src="/js/basic.js"></script>
-    <link href="/css/login.css" rel="stylesheet">
+    <link href="/css/user-input.css" rel="stylesheet">
 </head>
 <body>
 <header id="headers"></header>
