#151 [update] 유저 정보 수정 프론트 구현

--- a/src/main/resources/static/mypage-menu.html
+++ b/src/main/resources/static/mypage-menu.html
@@ -27,7 +27,7 @@
                 <a class="list-group-item list-group-item-action" href="#" id="get-user-info">
                     회원 정보
                 </a>
-                <a class="list-group-item list-group-item-action" href="#">
+                <a class="list-group-item list-group-item-action" href="#" id="update-user-info">
                     회원 정보 변경
                 </a>
                 <a class="list-group-item list-group-item-action" href="#">
@@ -56,6 +56,9 @@
 <script>
     $("#get-user-info").on("click", function () {
         movePageWithToken(`/user-info.html`);
+    });
+    $("#update-user-info").on("click", function () {
+        movePageWithToken(`/update-user-info.html`);
     });
 </script>
 </html>
