--- a/src/main/resources/static/update-user-info.html
+++ b/src/main/resources/static/update-user-info.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Auction Seats</title>
+    <title>Ticket Auction</title>
 
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
           name="viewport">
@@ -28,30 +28,32 @@
     <div class="col-8">
 
         <div class="row page-name">
-            <h2 class="col-sm-12">내 정보</h2>
+            <h2 class="col-sm-12">정보 수정</h2>
         </div>
         <div class="form-control px-4 py-3">
-            <div class="form-group row">
-                <label class="fs-4 col-md-4"><img class="logo" src="/images/mail-icon.png"/>이메일</label>
-                <div class="col-md-8 fs-5" id="info-email"></div>
+            <div class="form-group">
+                <label class="fs-5" for="update-nickname">
+                    <img class="logo" src="/images/email-icon.png"/>닉네임
+                </label>
+                <input class="form-control" id="update-nickname" name="nickname" type="text">
+                <span id="update-nickname-span" style="color: red;"></span>
             </div>
-            <div class="form-group row">
-                <label class="fs-4 col-md-4"><img class="logo" src="/images/email-icon.png"/>이름</label>
-                <div class="col-md-8 fs-5" id="info-name"></div>
+            <div class="form-group">
+                <label class="fs-5" for="update-phone">
+                    <img class="logo" src="/images/phone-icon.png"/>핸드폰 번호
+                </label>
+                <div class="row">
+                    <div class="col-md-9">
+                        <input class="form-control" id="update-phone" name="phone" type="tel">
+                    </div>
+                </div>
+                <span id="update-phoneNumber-span" style="color: red;"></span>
             </div>
-            <div class="form-group row">
-                <label class="fs-4 col-md-4"><img class="logo" src="/images/email-icon.png"/>닉네임</label>
-                <div class="col-md-8 fs-5" id="info-nickname"></div>
-            </div>
-            <div class="form-group row">
-                <label class="fs-4 col-md-4"><img class="logo" src="/images/birth-icon.png"/>생년월일</label>
-                <div class="col-md-8 fs-5" id="info-birth"></div>
-            </div>
-            <div class="form-group row">
-                <label class="fs-4 col-md-4"><img class="logo" src="/images/phone-icon.png"/>핸드폰 번호</label>
-                <div class="col-md-8 fs-5" id="info-phone"></div>
+            <div class="form-group mt-3">
+                <button class="btn btn-dark w-100 custom-btn" id="update-info-btn" type="submit">수정</button>
             </div>
         </div>
+
     </div>
 </div>
 </body>
@@ -59,20 +61,22 @@
     $("#headers").load("/header.html", function (response, status, xhr) {
         checkLoginStatus();
     });
+
     $("#menu").load("/mypage-menu.html", function (response, status, xhr) {
         $(document).ready(function () {
             // 모든 링크에서 'active' 클래스 제거
             $("#settings-menu a").removeClass("active");
 
             // 클릭된 링크에 'active' 클래스 추가
-            $("#get-user-info").addClass("active");
+            $("#update-user-info").addClass("active");
         });
     });
 
     const id = getUserId();
-    reissueToken((token => {
-        getMyInfo(token, id);
-    }));
+    $("#update-info-btn").on("click", function () {
+        reissueToken((token => {
+            updateUserInfo(token, id);
+        }));
+    });
 </script>
-
 </html>
