--- a/src/main/resources/static/showsInfo.html
+++ b/src/main/resources/static/showsInfo.html
@@ -2,12 +2,10 @@
 <html lang="en">
 <head id="head">
     <meta charset="UTF-8">
-    <title>Auction Seats</title>
-
+    <title>Ticket Auction</title>
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
           name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
-
     <script crossorigin="anonymous"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -49,6 +47,7 @@
             <label for="photo">Photo:</label>
             <input type="file" id="photo" name="photo" accept="image/*" required multiple>
         </div>
+
     </form>
     <button onclick="submitShowsInfo()" id="submitButton">공연 정보 추가</button>
     <button onclick="movePageWithToken()" id="showsPage">다음 페이지</button>
@@ -63,10 +62,9 @@
         }));
     });
     $("#showsPage").on("click", function () {
-        movePageWithToken("/shows.html");
-    });
-    $("#showsPage").on("click", function () {
-        movePageWithToken("/shows.html");
+        reissueToken((token => {
+            submitShowsInfo(token);
+        }));
     });
 </script>
 </body>
