--- a/src/main/resources/static/mypage-menu.html
+++ b/src/main/resources/static/mypage-menu.html
@@ -3,21 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Auction Seats</title>
-
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
           name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
-
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR&display=swap" rel="stylesheet">
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet">
-
     <link href="/css/style.css" rel="stylesheet">
     <link href="/css/mypage.css" rel="stylesheet">
     <script src="/js/basic.js"></script>
-
 </head>
 <body>
 <div class="row mt-5 justify-content-center">
@@ -30,14 +26,14 @@
                 <a class="list-group-item list-group-item-action" href="#" id="update-user-info">
                     회원 정보 변경
                 </a>
-                <a class="list-group-item list-group-item-action" href="#">
+                <a class="list-group-item list-group-item-action" href="#" id="update-user-password">
                     비밀 번호 변경
                 </a>
-                <a class="list-group-item list-group-item-action" href="#">
+                <a class="list-group-item list-group-item-action" href="#" id="charge-point-list">
                     포인트 충전 내역
                 </a>
-                <a class="list-group-item list-group-item-action" href="#">
-                    포인트 사용 내역
+                <a class="list-group-item list-group-item-action" href="#" id="point-list">
+                    포인트 변동 내역
                 </a>
                 <a class="list-group-item list-group-item-action" href="#">
                     예매 내역
@@ -52,7 +48,7 @@
         </div>
     </div>
 </div>
-</body>
+
 <script>
     $("#get-user-info").on("click", function () {
         movePageWithToken(`/user-info.html`);
@@ -60,5 +56,15 @@
     $("#update-user-info").on("click", function () {
         movePageWithToken(`/update-user-info.html`);
     });
+    $("#update-user-password").on("click", function () {
+        movePageWithToken(`/update-password.html`);
+    });
+    $("#charge-point-list").on("click", function () {
+        movePageWithToken(`/point-charge-list.html`);
+    });
+    $("#point-list").on("click", function () {
+        movePageWithToken(`/point-list.html`);
+    });
 </script>
+</body>
 </html>
