--- a/src/main/resources/static/place.html
+++ b/src/main/resources/static/place.html
@@ -41,8 +41,8 @@
     </table>
 
     <button onclick="addZone()">구역 추가</button>
-    <button onclick="submitPlace()" id="createPlace">공연장 추가하기</button>
-    <button onclick="movePageWithToken()" id="showsInfoPage">다음 페이지</button>
+    <button id="createPlace">공연장 추가하기</button>
+    <button id="showsInfoPage">다음 페이지</button>
 </div>
 </body>
 <script>
