--- a/src/main/resources/static/showsInfo.html
+++ b/src/main/resources/static/showsInfo.html
@@ -49,8 +49,8 @@
         </div>
 
     </form>
-    <button onclick="submitShowsInfoButton()" id="submitButton">공연 정보 추가</button>
-    <button onclick="movePageWithToken()" id="showsPage">다음 페이지</button>
+    <button id="submitShowsInfoButton">공연 정보 추가</button>
+    <button id="showsPage">다음 페이지</button>
 </div>
 <script>
     $("#headers").load("/header.html", function (response, status, xhr) {
