#164 [update - user] 회원 탈퇴 프론트 구현, html 폴더 안으로 이동

--- a/src/main/resources/static/header.html
+++ b/src/main/resources/static/header.html
@@ -72,16 +72,15 @@
         redirectToPage(`/login.html`);
     });
     $("#charge-point").on("click", function () {
-        movePageWithToken(`/paymentRequest.html`);
+        movePageWithToken(`/payment/request.html`);
     });
+
     $(".logout").on("click", function () {
         confirmFuncLogout();
     });
-    $("#signup").on('click', function () {
-        redirectToPage(`/signup.html`);
-    });
+
     $("#mypage").on("click", function () {
-        movePageWithToken(`/user-info.html`);
+        movePageWithToken(`/user/info.html`);
     });
 </script>
 </html>
