--- a/src/main/resources/static/user/point-charge-list.html
+++ b/src/main/resources/static/user/point-charge-list.html
@@ -17,7 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
     <script src="/js/token.js"></script>
     <script src="/js/basic.js"></script>
-    <script src="/js/mypage-menu.js"></script>
+    <script src="/js/common-menu.js"></script>
 </head>
 <body>
 
@@ -28,30 +28,38 @@
     <div class="col-8">
 
         <div class="row page-name">
-            <h2 class="col-sm-12">내 정보</h2>
+            <h2 class="col-sm-12">포인트 충전 내역</h2>
         </div>
-        <div class="form-control px-4 py-3">
-            <div class="form-group row">
-                <label class="fs-4 col-md-4"><img class="logo" src="/images/mail-icon.png"/>이메일</label>
-                <div class="col-md-8 fs-5" id="info-email"></div>
-            </div>
-            <div class="form-group row">
-                <label class="fs-4 col-md-4"><img class="logo" src="/images/email-icon.png"/>이름</label>
-                <div class="col-md-8 fs-5" id="info-name"></div>
-            </div>
-            <div class="form-group row">
-                <label class="fs-4 col-md-4"><img class="logo" src="/images/email-icon.png"/>닉네임</label>
-                <div class="col-md-8 fs-5" id="info-nickname"></div>
-            </div>
-            <div class="form-group row">
-                <label class="fs-4 col-md-4"><img class="logo" src="/images/birth-icon.png"/>생년월일</label>
-                <div class="col-md-8 fs-5" id="info-birth"></div>
-            </div>
-            <div class="form-group row">
-                <label class="fs-4 col-md-4"><img class="logo" src="/images/phone-icon.png"/>핸드폰 번호</label>
-                <div class="col-md-8 fs-5" id="info-phone"></div>
-            </div>
+        <div class="table-d2-list text-center">
+            <table>
+                <colgroup>
+                    <col style="width: 10%;">
+                    <col style="width: 50%;">
+                    <col style="width: 20%;">
+                    <col style="width: 20%;">
+                </colgroup>
+                <thead>
+                <tr>
+                    <th scope="row">
+                        번호
+                    </th>
+                    <th scope="row">
+                        결제 번호
+                    </th>
+                    <th scope="row">
+                        충전 일자
+                    </th>
+                    <th scope="row">
+                        충전 금액
+                    </th>
+                </tr>
+                </thead>
+                <tbody class="list-tb-body">
+                <tr class="list-tb-tr"></tr>
+                </tbody>
+            </table>
         </div>
+        <div class="pagination d-flex justify-content-center"></div>
     </div>
 </div>
 </body>
@@ -59,20 +67,21 @@
     $("#headers").load("/header.html", function (response, status, xhr) {
         checkLoginStatus();
     });
+
     $("#menu").load("/mypage-menu.html", function (response, status, xhr) {
         $(document).ready(function () {
             // 모든 링크에서 'active' 클래스 제거
             $("#settings-menu a").removeClass("active");
 
             // 클릭된 링크에 'active' 클래스 추가
-            $("#get-user-info").addClass("active");
+            $("#charge-point-list").addClass("active");
+
+            reissueToken((token => {
+                getPointChargeList(token, 0);
+            }));
         });
     });
 
-    const id = getUserId();
-    reissueToken((token => {
-        getMyInfo(token, id);
-    }));
-</script>
 
+</script>
 </html>
