--- a/src/main/resources/static/user/point-list.html
+++ b/src/main/resources/static/user/point-list.html
@@ -17,7 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
     <script src="/js/token.js"></script>
     <script src="/js/basic.js"></script>
-    <script src="/js/mypage-menu.js"></script>
+    <script src="/js/common-menu.js"></script>
 </head>
 <body>
 
@@ -28,32 +28,38 @@
     <div class="col-8">
 
         <div class="row page-name">
-            <h2 class="col-sm-12">정보 수정</h2>
+            <h2 class="col-sm-12">포인트 사용/환불 내역</h2>
         </div>
-        <div class="form-control px-4 py-3">
-            <div class="form-group">
-                <label class="fs-5" for="update-nickname">
-                    <img class="logo" src="/images/email-icon.png"/>닉네임
-                </label>
-                <input class="form-control" id="update-nickname" name="nickname" type="text">
-                <span id="update-nickname-span" style="color: red;"></span>
-            </div>
-            <div class="form-group">
-                <label class="fs-5" for="update-phone">
-                    <img class="logo" src="/images/phone-icon.png"/>핸드폰 번호
-                </label>
-                <div class="row">
-                    <div class="col-md-9">
-                        <input class="form-control" id="update-phone" name="phone" type="tel">
-                    </div>
-                </div>
-                <span id="update-phoneNumber-span" style="color: red;"></span>
-            </div>
-            <div class="form-group mt-3">
-                <button class="btn btn-dark w-100 custom-btn" id="update-info-btn" type="submit">수정</button>
-            </div>
+        <div class="table-d2-list text-center">
+            <table>
+                <colgroup>
+                    <col style="width: 10%;">
+                    <col style="width: 30%">
+                    <col style="width: 30%;">
+                    <col style="width: 30%;">
+                </colgroup>
+                <thead>
+                <tr>
+                    <th scope="row">
+                        번호
+                    </th>
+                    <th scope="row">
+                        변동 타입
+                    </th>
+                    <th scope="row">
+                        변동 일자
+                    </th>
+                    <th scope="row">
+                        변동 금액
+                    </th>
+                </tr>
+                </thead>
+                <tbody class="list-tb-body">
+                <tr class="list-tb-tr"></tr>
+                </tbody>
+            </table>
         </div>
-
+        <div class="pagination d-flex justify-content-center"></div>
     </div>
 </div>
 </body>
@@ -68,15 +74,14 @@
             $("#settings-menu a").removeClass("active");
 
             // 클릭된 링크에 'active' 클래스 추가
-            $("#update-user-info").addClass("active");
+            $("#point-list").addClass("active");
+
+            reissueToken((token => {
+                getPointList(token, 0);
+            }));
         });
     });
 
-    const id = getUserId();
-    $("#update-info-btn").on("click", function () {
-        reissueToken((token => {
-            updateUserInfo(token, id);
-        }));
-    });
+
 </script>
 </html>
