--- a/src/main/resources/static/user/withraw.html
+++ b/src/main/resources/static/user/withraw.html
@@ -18,6 +18,7 @@
     <script src="/js/token.js"></script>
     <script src="/js/basic.js"></script>
     <script src="/js/common-menu.js"></script>
+    <link href="/css/mypage.css" rel="stylesheet">
 </head>
 <body>
 
@@ -44,7 +45,7 @@
                 <span class="passwordMatchMessage"></span>
             </div>
             <div class="form-group mt-3">
-                <button class="btn btn-dark w-100 custom-btn" id="delete-btn" type="submit">회원 탈퇴</button>
+                <button class="btn btn-danger w-100 custom-btn" id="delete-btn" type="submit">회원 탈퇴</button>
             </div>
         </div>
     </div>
