--- a/src/main/resources/static/header.html
+++ b/src/main/resources/static/header.html
@@ -3,29 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Auction Seats</title>
-
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
           name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
-
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR&display=swap" rel="stylesheet">
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet">
-
     <link href="/css/style.css" rel="stylesheet">
     <script src="/js/basic.js"></script>
 </head>
 <body>
-
 <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
     <a class="d-flex align-items-center ps-5 mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
        href="/static">
         <img class="bi me-2" height="35" src="/images/ticket.png" width="40"/>
-        <span class="fs-3">Auction Seats</span>
+        <span class="fs-3">Ticket Auction</span>
     </a>
-
     <ul class="nav nav-pills me-5 fs-5">
         <li class="nav-item" id="login" style="display: none;">
             <a class="nav-link" href="" style="color: black;">로그인</a>
@@ -65,7 +60,6 @@
         </li>
     </ul>
 </header>
-
 </body>
 <script>
     $("#login").on("click", function () {
@@ -74,13 +68,15 @@
     $("#charge-point").on("click", function () {
         movePageWithToken(`/payment/request.html`);
     });
-
     $(".logout").on("click", function () {
         confirmFuncLogout();
     });
-
     $("#mypage").on("click", function () {
         movePageWithToken(`/user/info.html`);
+    });
+
+    $("#signup").on('click', function () {
+        redirectToPage(`/user/signup.html`);
     });
 </script>
 </html>
