--- a/src/main/resources/static/user/common-menu.html
+++ b/src/main/resources/static/user/common-menu.html
@@ -63,10 +63,10 @@
         movePageWithToken(`/user/withdraw.html`);
     });
     $("#charge-point-list").on("click", function () {
-        movePageWithToken(`/point-charge-list.html`);
+        movePageWithToken(`/user/point-charge-list.html`);
     });
     $("#point-list").on("click", function () {
-        movePageWithToken(`/point-list.html`);
+        movePageWithToken(`/user/point-list.html`);
     });
 </script>
 </body>
