--- a/src/main/resources/static/user/point-charge-list.html
+++ b/src/main/resources/static/user/point-charge-list.html
@@ -18,6 +18,7 @@
     <script src="/js/token.js"></script>
     <script src="/js/basic.js"></script>
     <script src="/js/common-menu.js"></script>
+    <link href="/css/mypage.css" rel="stylesheet">
 </head>
 <body>
 
@@ -68,7 +69,7 @@
         checkLoginStatus();
     });
 
-    $("#menu").load("/mypage-menu.html", function (response, status, xhr) {
+    $("#menu").load("/user/common-menu.html", function (response, status, xhr) {
         $(document).ready(function () {
             // 모든 링크에서 'active' 클래스 제거
             $("#settings-menu a").removeClass("active");
