--- a/src/main/resources/static/user/signup.html
+++ b/src/main/resources/static/user/signup.html
@@ -86,8 +86,8 @@
                 </div>
             <span id="phoneNumber-span" style="color: red;"></span>
         </div>
-        <div class="form-group">
-            <button class="btn btn-dark w-100 custom-btn" id="sign-up-btn" type="submit">회원가입</button>
+        <div class="form-group user-input-div">
+            <button class="btn user-input-btn w-100 custom-btn" id="sign-up-btn" type="submit">회원가입</button>
         </div>
     </div>
 </div>
