--- a/src/main/resources/static/user/update-info.html
+++ b/src/main/resources/static/user/update-info.html
@@ -18,6 +18,7 @@
     <script src="/js/token.js"></script>
     <script src="/js/basic.js"></script>
     <script src="/js/common-menu.js"></script>
+    <link href="/css/mypage.css" rel="stylesheet">
 </head>
 <body>
 
@@ -49,8 +50,8 @@
                 </div>
                 <span id="update-phoneNumber-span" style="color: red;"></span>
             </div>
-            <div class="form-group mt-3">
-                <button class="btn btn-dark w-100 custom-btn" id="update-info-btn" type="submit">수정</button>
+            <div class="form-group user-input-div mt-3">
+                <button class="btn user-input-btn w-100 custom-btn" id="update-info-btn" type="submit">수정</button>
             </div>
         </div>
 
