#175 [view] [view] 메인페이지 구현

--- a/src/main/resources/static/admin/shows.html
+++ b/src/main/resources/static/admin/shows.html
@@ -60,7 +60,7 @@
     });
     $("#submitShowsButton").on("click", function () {
         reissueToken((token => {
-            submitShowsAndSchedule(token);
+            submitShowrsAndSchedule(token);
         }));
     });
 </script>
