--- a/src/main/resources/static/admin/place.html
+++ b/src/main/resources/static/admin/place.html
@@ -56,7 +56,7 @@
     </table>
     <div class="d-flex justify-content-center place-btn-div mt-5">
         <button class="btn me-4" id="createPlaceButton">공연장 추가하기</button>
-        <button class="btn " id="goodsInfoPage">다음 페이지</button>
+        <button class="btn " id="showsInfoPage">다음 페이지</button>
     </div>
 </div>
 </body>
