--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,11 +3,9 @@
 <head id="head">
     <meta charset="UTF-8">
     <title>Auction Seats</title>
-
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
           name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
-
     <script crossorigin="anonymous"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -15,21 +13,44 @@
             integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
             src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
+
     <script src="/js/token.js"></script>
     <script src="/js/basic.js"></script>
+    <script src="/js/shows.js"></script>
 </head>
 <body>
 <header id="headers"></header>
-<div class="container">
 
+<nav class="shows-menu">
+    <div class="d-flex flex-wrap shows-menu-div">
+        <ul class="nav shows-menu-ul fs-5"></ul>
+    </div>
+</nav>
+
+<div class="container mt-5">
+    <div class="text-center mb-5"><h1>장르별</h1></div>
+    <div class="btn-by-category d-flex justify-content-center"></div>
+    <div id="shows-poster-by-category"></div>
+
+    <div class="row shows-posters-row">
+        <div class="d-flex justify-content-around posters-div col-md-12" id="shows-posters"></div>
+    </div>
 </div>
 </body>
 
 <script>
+    $(document).ready(function () {
+        $.getScript("/token.js", function () {
+            $("#headers").load("/header.html", function (response, status, xhr) {
+                checkLoginStatus();
+            });
+        });
+        getShowsCategories();
+        clickOnCategoryBtn("연극");
+    });
+
     $("#headers").load("/header.html", function (response, status, xhr) {
         checkLoginStatus();
     });
 </script>
-
-
 </html>
