--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -34,8 +34,7 @@
             </button>
         </div>
         <div class="d-flex justify-content-center">
-            <a class="me-3" onclick="redirectToPageWithToken(`/signup.html`)">회원 가입</a>
-            <a class="" href="#">비밀번호 찾기</a>
+            <a class="me-3" href="#" onclick="redirectToPageWithToken(`/user/signup.html`)">회원 가입</a>
         </div>
     </div>
 </div>
