--- a/src/main/resources/static/admin/place.html
+++ b/src/main/resources/static/admin/place.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head id="head">
     <meta charset="UTF-8">
-    <title>Auction Seats</title>
+    <title>Ticket Auction</title>
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
           name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
@@ -16,27 +16,24 @@
     <script src="/js/token.js"></script>
     <script src="/js/basic.js"></script>
     <script src="/js/admin.js"></script>
-    <link href="/css/place.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/place.css">
 </head>
 <body>
 <header id="headers"></header>
 <div class="container">
-    <h1 class="text-center">공연장 등록</h1>
     <div class="section">
-        <label class="fs-5 mt-3" for="placeName">공연장 이름</label>
-        <input id="placeName" required type="text">
-
-        <label class="fs-5 mt-3" for="address">공연장 주소</label>
-        <input id="address" required type="text">
+        <label for="placeName">공연장 이름:</label>
+        <input type="text" id="placeName" required>
+        <label for="address">공연장 주소:</label>
+        <input type="text" id="address" required>
     </div>
 
     <div class="section zones-section">
-        <label class="fs-5 mt-3" for="zoneName">구역명</label>
-        <input id="zoneName" placeholder="구역명 입력" required type="text">
+        <label for="placeZoneName">구역명:</label>
+        <input type="text" id="placeZoneName" placeholder="구역명 입력" required>
 
-        <label class="fs-5 mt-3" for="zoneSeats">총 좌석 수</label>
-        <input id="zoneSeats" placeholder="총 좌석 수 입력" required type="number">
-
+        <label for="placeZoneSeat">총 좌석 수:</label>
+        <input type="number" id="placeZoneSeat" placeholder="총 좌석 수 입력" required>
         <div class="place-btn-div d-flex justify-content-center">
             <button class="btn place-btn" id="addZoneButton">구역 추가</button>
         </div>
