#185 [refactor] 각 도메인의 패키지로 이동 후, 수정

--- a/src/main/resources/static/admin/place.html
+++ b/src/main/resources/static/admin/place.html
@@ -69,7 +69,7 @@
     $('#addZoneButton').on('click', addZone); // 구역 추가 이벤트 핸들러
 
     $("#showsInfoPage").on("click", function () {
-        movePageWithToken("/shows-info.html");
+        movePageWithToken("/admin/shows-info.html");
     });
 
 </script>
