--- a/src/main/resources/static/admin/shows-Info.html
+++ b/src/main/resources/static/admin/shows-Info.html
@@ -63,7 +63,7 @@
         }));
     });
     $("#showsPage").on("click", function () {
-        movePageWithToken("/shows.html");
+        movePageWithToken("/admin/shows.html");
     });
 </script>
 </body>
