--- a/src/main/resources/static/header.html
+++ b/src/main/resources/static/header.html
@@ -85,15 +85,15 @@
     });
 
     $("#add-place-btn").on('click', function () {
-        movePageWithToken(`/place.html`)
+        movePageWithToken(`/admin/place.html`)
     });
 
     $("#add-shows-info-btn").on('click', function () {
-        movePageWithToken(`/shows-info.html`)
+        movePageWithToken(`/admin/shows-info.html`)
     });
 
     $("#add-shows-btn").on('click', function () {
-        movePageWithToken(`/shows.html`)
+        movePageWithToken(`/admin/shows.html`)
     });
 </script>
 </html>
