--- a/src/main/resources/static/user/withraw.html
+++ b/src/main/resources/static/user/withraw.html
@@ -62,7 +62,7 @@
             $("#settings-menu a").removeClass("active");
 
             // 클릭된 링크에 'active' 클래스 추가
-            $("#").addClass("active");
+            $("#withdraw-user").addClass("active");
         });
     });
 
