--- a/src/main/resources/static/user/common-menu.html
+++ b/src/main/resources/static/user/common-menu.html
@@ -67,7 +67,7 @@
         movePageWithToken(`/user/point-list.html`);
     });
     $("#reservation-list").on("click", function () {
-        movePageWithToken(`/reservation-list.html`);
+        movePageWithToken(`/reservation/reservation-list.html`);
     });
 </script>
 </body>
