--- a/src/main/resources/static/admin/shows-Info.html
+++ b/src/main/resources/static/admin/shows-Info.html
@@ -16,7 +16,7 @@
     <script src="/js/token.js"></script>
     <script src="/js/basic.js"></script>
     <script src="/js/admin.js"></script>
-    <link href="/css/showsInfo.css" rel="stylesheet">
+    <link href="/css/shows-info.css" rel="stylesheet">
 </head>
 <body>
 <header id="headers"></header>
