--- a/src/main/resources/static/admin/grade.html
+++ b/src/main/resources/static/admin/grade.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head id="head">
     <meta charset="UTF-8">
-    <title>Ticket Auction</title>
+    <title>Auction Seats</title>
 
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
           name="viewport">
