--- a/src/main/resources/static/admin/shows.html
+++ b/src/main/resources/static/admin/shows.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>Auction Seats</title>
 
-    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-          name="viewport">
+    <meta content="width=device-width, user-scalable=no, initial-scale=0.8, maximum-scale=1.0" name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
 
     <script crossorigin="anonymous"
@@ -60,7 +59,7 @@
     });
     $("#submitShowsButton").on("click", function () {
         reissueToken((token => {
-            submitShowrsAndSchedule(token);
+            submitShowsAndSchedule(token);
         }));
     });
 </script>
