--- a/src/main/resources/static/header.html
+++ b/src/main/resources/static/header.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Auction Seats</title>
-    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-          name="viewport">
-    <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Hahmlet:wght@400;500;600&family=IBM+Plex+Sans+KR:wght@300;400;500;600;700&display=swap"
@@ -13,21 +8,24 @@
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script src="/js/basic.js"></script>
 </head>
 <body>
-<header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-    <a class="d-flex align-items-center ps-5 mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
+
+<header class="d-flex flex-wrap justify-content-center py-4">
+    <a class="d-flex align-items-center ps-6 mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
        href="#" id="main-logo">
-        <img class="bi me-2" height="35" src="/images/ticket.png" width="40"/>
-        <span class="fs-3 fw-bold">Auction Seats</span>
+        <img class="bi me-2 ms-3" height="30" src="/images/ticket.png" width="30"/>
+        <span class="fw-bold fs-5">Auction Seats</span>
     </a>
-    <ul class="nav nav-pills me-5 fs-5">
-        <li class="nav-item" id="login" style="display: none;">
-            <a class="nav-link" href="" style="color: black;">로그인</a>
+
+    <ul class="nav nav-pills me-5 fs-6">
+        <li class="nav-item">
+            <a class="nav-link" href="#" id="login" style="display: none; color: black;">로그인</a>
         </li>
-        <li class="nav-item" id="signup" style="display: none;">
-            <a class="nav-link" href="" style="color: black;">회원가입</a>
+        <li class="nav-item">
+            <a class="nav-link" href="#" id="signup" style="color: black;display: none;">회원가입</a>
         </li>
         <li class="nav-item dropdown" id="login-user-set"
             style="float:right; list-style-type: none; margin-left: 20px; display: none;">
@@ -52,7 +50,6 @@
             </a>
             <div aria-labelledby="userDropdown" class="dropdown-menu dropdown-menu-sm-right" id="admin-drop-menus">
                 <h3 class="dropdown-header" id="admin-nickname"></h3>
-                <a class="dropdown-item" href="#">관리자 추가</a>
                 <a class="dropdown-item" id="add-place-btn">공연장 추가</a>
                 <a class="dropdown-item" href="#" id="add-shows-info-btn">공연 정보 추가</a>
                 <a class="dropdown-item" href="#" id="add-shows-btn">공연 추가</a>
@@ -62,20 +59,24 @@
         </li>
     </ul>
 </header>
+
 </body>
 <script>
     $("#main-logo").on("click", function () {
         movePage();
     });
     $("#login").on("click", function () {
-        redirectToPage(`/login.html`);
+        redirectToPage('/login.html');
     });
+
     $("#charge-point").on("click", function () {
         movePageWithToken(`/payment/request.html`);
     });
+
     $(".logout").on("click", function () {
         confirmFuncLogout();
     });
+
     $("#mypage").on("click", function () {
         movePageWithToken(`/user/info.html`);
     });
