--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,9 +3,10 @@
 <head id="head">
     <meta charset="UTF-8">
     <title>Auction Seats</title>
-    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-          name="viewport">
+
+    <meta content="width=device-width, user-scalable=no, initial-scale=0.8, maximum-scale=1.0" name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
+
     <script crossorigin="anonymous"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -21,19 +22,11 @@
 <body>
 <header id="headers"></header>
 
-<nav class="shows-menu">
-    <div class="d-flex flex-wrap shows-menu-div">
-        <ul class="nav shows-menu-ul fs-5"></ul>
-    </div>
-</nav>
-
 <div class="container mt-5">
-    <div class="text-center mb-5"><h1>장르별</h1></div>
     <div class="btn-by-category d-flex justify-content-center"></div>
     <div id="shows-poster-by-category"></div>
 
-    <div class="row shows-posters-row">
-        <div class="d-flex justify-content-around posters-div col-md-12" id="shows-posters"></div>
+    <div class="shows-posters-row">
     </div>
 </div>
 </body>
@@ -44,8 +37,18 @@
     });
 
     $(document).ready(function () {
-        getShowsCategories();
-        clickOnCategoryBtn("연극");
+        getShowsCategories()
+            .then(function (data) {
+                loadShows();
+            });
+    });
+
+
+    $(window).scroll(function () {
+        if ($(window).scrollTop() + $(window).height() >= $(document).height() - 100) {
+            loadShows();
+        }
     });
 </script>
+
 </html>
