--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -3,9 +3,10 @@
 <head id="head">
     <meta charset="UTF-8">
     <title>Auction Seats</title>
-    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-          name="viewport">
+
+    <meta content="width=device-width, user-scalable=no, initial-scale=0.8, maximum-scale=1.0" name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
+
     <script crossorigin="anonymous"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -19,20 +20,22 @@
 </head>
 <body>
 <header id="headers"></header>
-<div class="container">
-    <div class="form-control px-4 py-3">
+
+<div class="container mt-5">
+    <div class="form-control">
         <div class="form-group">
-            <label class="fs-5" for="email"><img class="logo" src="/images/email-icon.png"/>이메일</label>
+            <label class="fs-6" for="email"><img class="logo" src="/images/email-icon.png"/>이메일</label>
             <input class="form-control" id="email" name="email" placeholder="이메일" type="email">
         </div>
         <div class="form-group">
-            <label class="fs-5" for="password"><img class="logo" src="/images/pw-icon.png"/>비밀번호</label>
+            <label class="fs-6" for="password"><img class="logo" src="/images/pw-icon.png"/>비밀번호</label>
             <input class="form-control" id="password" name="비밀번호" placeholder="Password" type="password">
         </div>
         <div class="form-group user-input-div">
-            <button class="btn user-input-btn w-100" onclick="requestLogin()" style="height: 50px;" type="submit">로그인
+            <button class="btn user-input-btn w-100" id="login-btn" style="height: 50px;" type="submit">로그인
             </button>
         </div>
+
         <div class="d-flex justify-content-center">
             <a class="me-3" href="#" onclick="redirectToPageWithToken(`/user/signup.html`)">회원 가입</a>
         </div>
@@ -44,6 +47,10 @@
     $("#headers").load("/header.html", function (response, status, xhr) {
         checkLoginStatus();
     })
+
+    $("#login-btn").on("click", function () {
+        requestLogin();
+    });
 </script>
 
 </html>
